<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:weightSum="1"
    tools:context="com.wcccd.wcccditcareerprograms.WelcomeScreenMainActivity">

    <Button
        android:id="@+id/tapToViewButton"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="24dp"
        android:onClick="tapToViewPrograms"
        android:text="@string/welcome_button"
        android:textSize="12sp"
        android:layout_below="@+id/welcome_text_view"
        android:layout_alignStart="@+id/welcome_text_view" />

    <ImageView
        android:id="@+id/wcccdImageView"
        android:layout_width="205dp"
        android:layout_height="205dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/logo_wcccd" />

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="360dp"
        android:layout_height="105dp"
        android:layout_below="@+id/wcccdImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/welcome_screen"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/contactButton"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_alignEnd="@+id/welcome_text_view"
        android:layout_alignTop="@+id/tapToViewButton"
        android:layout_marginEnd="28dp"
        android:onClick="contactButton"
        android:text="@string/ContactButton"
        android:textSize="12sp" />
</RelativeLayout>

