<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:weightSum="1"
    tools:context="com.wcccd.wcccditcareerprograms.ContactUsActivity">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="412dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="11dp"
        android:layout_weight="0.38"
        android:background="@color/Steel_Blue"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cisDepartTextView"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_above="@+id/contactUsTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal"
            android:paddingLeft="9dp"
            android:paddingTop="9dp"
            android:text="@string/CisGeneral_InfoTitle"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/hr"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/Solitude"
        android:orientation="horizontal"
        android:layout_below="@+id/tableRow"
        android:layout_alignParentStart="true">


        <TextView
            android:id="@+id/contactUsTextView"
            android:layout_width="113dp"
            android:layout_height="50dp"
            android:layout_marginBottom="51dp"
            android:gravity="center_horizontal"
            android:paddingRight="7dp"
            android:paddingTop="11dp"
            android:text="@string/ContactUs_TextView"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cisProgWcccd.eduTextView"
            android:layout_width="249dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:autoLink="web"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:paddingLeft="4dp"
            android:paddingTop="9dp"
            android:text="@string/CisPrograms_Contact"
            android:textSize="17sp"
            android:textStyle="bold|italic" />

    </TableRow>


</RelativeLayout>
